<resources>
    <!--アプリの基本情報-->
    <string name="app_name">Shopping Friend</string>

    <string name="title">TITLE</string>
    <string name="check">Check</string>

    <!--ImageButtonの文字の設定-->
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!--タイトル名で削除の警告-->
    <string name="delete_with_title_title">Waring</string>
    <string name="delete_with_title_message">Do you really want to delete it?</string>
    <string name="delete_with_title_positive">Yes</string>
    <string name="delete_with_title_negative">Cancel</string>

    <!--タイトル変更画面-->
    <string name="edit_title_title">Title</string>
    <string name="edit_title_message">Input the title</string>
    <string name="edit_title_hint">Title</string>
    <string name="edit_title_positive">OK</string>
    <string name="edit_title_negative">Cancel</string>

    <!--タイトル変更不可画面-->
    <string name="no_edit_title_message">Sorry, but you can\'t change it.</string>
    <string name="no_edit_title_positive">OK</string>

    <!--欄を削除した際のスナックバー-->
    <string name="snack_bar_message">An item was deleted</string>
    <string name="snack_bar_action">UNDO</string>
    <string name="snack_bar_after">The item was restored.</string>

    <!--チェックアウトの警告-->
    <string name="check_out_title">Waring</string>
    <string name="check_out_message">Do you want to delete all checked item?</string>
    <string name="check_out_positive">Yes</string>
    <string name="check_out_negative">Cancel</string>

    <!--contentsDescriptionのための文章-->
    <string name="show_title_recycler_view">Please add　or select your list</string>
    <string name="show_contents_recycler_view">Please check the items</string>

    <!--メニュー画面-->
    <string name="help">help</string>
    <string name="settings">settings</string>
    <string name="reload" >reload</string>
    <string name="share">share</string>
    <string name="list_top">-&#160;</string>
    <string name="no_value">There is no value to share</string>

    <!--設定画面-->
    <!--バージョン-->
    <string name="setting_version">1.0</string>
    <string name="application_version">1.0</string>

    <!--デフォルトタイトル設定-->
    <string name="default_title">Default title(You Can\'t set Empty.)</string>
    <string name="non_title">Non-title</string>

    <!--テキストサイズ設定-->
    <string name="text_size">Text size</string>
    <string name="small_size">Small</string>
    <string name="medium_size">Medium</string>
    <string name="large_size">Large</string>

    <!--ツールバーの文字の色の設定-->
    <string name="toolbar_text_theme">Toolbar Text Theme</string>
    <string name="black">Black</string>
    <string name="white">White</string>

    <!--共有の設定-->
    <string name="share_all_title">Setting of share</string>
    <string name="share_all_on">Only non-checked item will be shared.</string>
    <string name="share_all_off">All item will be shared.</string>

    <!--ヘルプ画面-->
    <string-array name="help">
        <item>This is help screen.</item>
        <item>Check off this item and it goes down.</item>
        <item>This app has automatic save function.</item>
        <item>Empty item won\'t save.</item>
        <item>Push the garbage button and all checked item will disappear.</item>
        <item>Swipe the item left and it will delete.</item>
        <item>Push + button and a new item will appear.</item>
        <item>Tap the item when you want to edit.</item>
        <item>Pushing enter in the bottom item also make a new item.</item>
        <item>Default title will set when you enter empty as list title.</item>
    </string-array>
</resources>